# bert-relational-schemata

./: .env.example  .gitignore  README.md  bert_model_graph  main.py  pyproject.toml
data/: inputs.json
lib/: bert.py  examples.py  formatting.py  json.py  relations.py
lib/sql/: __init__.py
notebooks/: finetuning.ipynb
notebooks/data_generation/: generate_inputs.ipynb
notebooks/evaluation/: finetuned_bert.ipynb  pretrained_bert.ipynb  pretrained_bert_control.ipynb
paper/: bibliography.bib  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fff  main.fls  main.out  main.tex
