[project]
name = "ling-486-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=0.26.0",
    "bertviz>=1.4.0",
    "datasets>=3.6.0",
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.4",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torchinfo>=1.8.0",
    "torchviz>=0.0.3",
    "transformers>=4.51.3",
    "umap-learn>=0.5.7",
]
